c4prj2_input/grade.txt
Grading at Thu Mar 11 11:21:23 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:40:32: error: expected ‘;’ before ‘}’ token
     if (input == NULL){continue}
                                ^
Compilation of input.c failed

Overall Grade: F
